--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -6,3 +6,10 @@ freeze: true
 
 # Enable banner style title blocks
 title-block-banner: true
+
+# Author name of all blog posts
+author: 'Lawrence Wu'
+
+# Table of content settings
+toc: true
+toc-depth: 3
